--- a/plan/pom.xml
+++ b/plan/pom.xml
@@ -49,6 +49,25 @@
 		  <artifactId>webdrivermanager</artifactId>
 		  <version>4.0.0</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>com.opencsv</groupId>
+		  <artifactId>opencsv</artifactId>
+		  <version>3.3</version>
+	  </dependency>
+	  <!-- https://mvnrepository.com/artifact/org.jumpmind.symmetric/symmetric-csv -->
+	  <dependency>
+		  <groupId>org.jumpmind.symmetric</groupId>
+		  <artifactId>symmetric-csv</artifactId>
+		  <version>3.5.19</version>
+	  </dependency>
+	  <!-- https://mvnrepository.com/artifact/com.epam/parso -->
+	  <dependency>
+		  <groupId>com.epam</groupId>
+		  <artifactId>parso</artifactId>
+		  <version>2.0.14</version>
+	  </dependency>
+
+
 
   </dependencies>
 </project>
