WIP: Added few more wait condition

--- a/plan/configs/Configuration.properties
+++ b/plan/configs/Configuration.properties
@@ -1,2 +1,3 @@
 applicationUrl=http://jupiter.cloud.planittesting.com
-testDataFileName=TestData.csv;
+csvTestDataFilePath=TestData.csv;
+excelTestDataFilePath =PlanItSolution.xlsx.
