WIP: Adding screenshot functionality

--- a/plan/configs/Configuration.properties
+++ b/plan/configs/Configuration.properties
@@ -1,3 +1,4 @@
 applicationUrl=http://jupiter.cloud.planittesting.com
 csvTestDataFilePath=TestData.csv;
-excelTestDataFilePath =PlanItSolution.xlsx.
+excelTestDataFilePath=PlanItSolution.xlsx
+screenShotsDirectory=screenshots
