--- a/plan/pom.xml
+++ b/plan/pom.xml
@@ -29,12 +29,6 @@
 	    <version>3.141.59</version>
 	</dependency>
 	  <dependency>
-		  <groupId>org.testng</groupId>
-		  <artifactId>testng</artifactId>
-		  <version>7.4.0</version>
-		  <scope>test</scope>
-	  </dependency>
-	  <dependency>
 		  <groupId>org.apache.poi</groupId>
 		  <artifactId>poi</artifactId>
 		  <version>5.0.0</version>
@@ -50,24 +44,15 @@
 		  <version>4.0.0</version>
 	  </dependency>
 	  <dependency>
-		  <groupId>com.opencsv</groupId>
-		  <artifactId>opencsv</artifactId>
-		  <version>3.3</version>
-	  </dependency>
-	  <!-- https://mvnrepository.com/artifact/org.jumpmind.symmetric/symmetric-csv -->
-	  <dependency>
 		  <groupId>org.jumpmind.symmetric</groupId>
 		  <artifactId>symmetric-csv</artifactId>
 		  <version>3.5.19</version>
 	  </dependency>
-	  <!-- https://mvnrepository.com/artifact/com.epam/parso -->
 	  <dependency>
-		  <groupId>com.epam</groupId>
-		  <artifactId>parso</artifactId>
-		  <version>2.0.14</version>
+		  <groupId>org.testng</groupId>
+		  <artifactId>testng</artifactId>
+		  <version>7.4.0</version>
+		  <scope>compile</scope>
 	  </dependency>
-
-
-
   </dependencies>
 </project>
